apps/minecraft/app/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: game
  namespace: minecraft
spec:
  entryPoints:
    - minecraft
  routes:
  - match: HostSNI(`*`)
    services:
    - name: minecraft-minecraft
      port: minecraft
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web-map
  namespace: minecraft
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`minecraft-map.trivernis.net`, `minecraft-map.trivernis.dev`)
    kind: Rule
    middlewares:
      - name: strict-security-headers
        namespace: default
    services:
    - name: minecraft-minecraft
      port: map
